[metadata]
# replace with your username:
name = dr-buster 
version = 1.0.9
author = kelj0
author_email = kelj0@protonmail.com
description = Simple, yet effective web path finder implemented with multiprocessing in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kelj0/dr_buster
project_urls =
    Bug Tracker = https://github.com/kelj0/dr_buster/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3
